--- a/package.json
+++ b/package.json
@@ -1,24 +1,34 @@
 {
-  "name": "embed-link",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.6"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
-  }
+    "name": "embed-link",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "format": "biome format --write .",
+        "pages:build": "npx @cloudflare/next-on-pages",
+        "preview": "npm run pages:build && wrangler pages dev",
+        "deploy": "npm run pages:build && wrangler pages deploy"
+    },
+    "dependencies": {
+        "@biomejs/biome": "^1.9.4",
+        "@cloudflare/next-on-pages": "^1.13.7",
+        "@danktuary/react-discord-message": "^1.0.2",
+        "daisyui": "^4.12.23",
+        "next": "15.1.6",
+        "react": "^19.0.0",
+        "react-color": "^2.19.3",
+        "react-dom": "^19.0.0",
+        "sonner": "^1.7.4"
+    },
+    "devDependencies": {
+        "typescript": "^5",
+        "@types/node": "^20",
+        "@types/react": "^19",
+        "@types/react-dom": "^19",
+        "postcss": "^8",
+        "tailwindcss": "^3.4.1"
+    }
 }
