feat: analytics & default embed

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@biomejs/biome": "^1.9.4",
         "@cloudflare/next-on-pages": "^1.13.7",
         "@danktuary/react-discord-message": "^1.0.2",
+        "@swetrix/nextjs": "^1.0.1",
         "daisyui": "^4.12.23",
         "next": "15.1.6",
         "react": "^19.0.0",
